# mylaps

./: .gitignore  CMakeLists.txt  Dockerfile  README.txt
client/: client.pro  main.cpp  rcs_client.cpp  rcs_client.h  rcs_client.ui
server/: CMakeLists.txt  README.txt  main.cpp  rcs_server.cpp  rcs_server.hpp
server/src/server/: rcs_logic.cpp  rcs_logic.hpp  rcs_server.cpp  rcs_server.hpp
server/tests/: CMakeLists.txt
server/tests/server/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  rcs_server.cpp  rcs_server.hpp
tests/: main.cpp
tests/libs/googletest/: CMakeLists.txt  CMakeLists.txt.in
tests/server/: rcs_server_test.cpp
